--- a/app/frontend/src/stylesheets/attendances.scss
+++ b/app/frontend/src/stylesheets/attendances.scss
@@ -33,16 +33,21 @@
   float: right;
 }
 
-.inputtime{
-  float: right;
+.inputtime {
+  // float: right;
   display: inline;
   line-height: 65px;
 }
-.table .save-button {
+.table {
   float: left;
   margin: 10px;
 }
 .btn-success {
   margin-left: 5px;
   margin-right: 5px;
+}
+
+.attend-save .attend-output {
+  float: right;
+  margin: 10px;
 }
