--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,8 +27,9 @@
             <% if @current_user.owner? %>
               <%= link_to edit_holiday_path(@current_user.id), class: 'list-group-item list-group-item-action list-group-item-light' do %>
                 有給休暇申請
-                <%# 申請数を表示 %>
-                <span class="badge badge-primary badge-pill"><%= @apply_count %></span>
+                <% if @apply_count != 0 %>
+                  <span class="badge badge-primary badge-pill"><%= @apply_count %></span>
+                <% end %>
               <%end%>
             <%end%>
             <%= link_to holiday_path(@current_user.id), class: 'list-group-item list-group-item-action list-group-item-light' do %>
