--- a/app/views/attendances/show.html.erb
+++ b/app/views/attendances/show.html.erb
@@ -52,10 +52,12 @@
               method: 'get', local: true, class: 'attend-output' do |f| %>
   <% if @current_user.owner? %>
     <%# CSVを出力する処理 %>
-    <%= button_tag('CSV出力', name:'output', class: 'btn btn-success') %>
-    <input type='hidden' name='select_user' value='<%= @selected_user.id %>' >
-    <input type='hidden' name='select_year' value='<%= @select_date.year.to_i %>'>
-    <input type='hidden' name='select_month' value='<%= @select_date.month.to_i %>'>
+    <div class='output'>
+      <%= button_tag('CSV出力', name:'output', class: 'btn btn-success btn-output') %>
+      <input type='hidden' name='select_user' value='<%= @selected_user.id %>' >
+      <input type='hidden' name='select_year' value='<%= @select_date.year.to_i %>'>
+      <input type='hidden' name='select_month' value='<%= @select_date.month.to_i %>'>
+    </div>
   <% end %>
   <%= render :partial => 'attendances/attendance_table' %>
 <% end %>
