--- a/app/views/attendances/show.html.erb
+++ b/app/views/attendances/show.html.erb
@@ -43,7 +43,7 @@
       <input type='hidden' name='change_start_hour' value='' >
       <input type='hidden' name='change_start_minute' value='' >
       <input type='hidden' name='change_end_hour' value='' >
-      <input type='hidden' name='change_end_mitute' value='' >
+      <input type='hidden' name='change_end_minute' value='' >
       <input type='hidden' name='change_status' value='' >
     <% end %>
   </div>
