--- a/app/views/templates/_input.html.erb
+++ b/app/views/templates/_input.html.erb
@@ -3,6 +3,7 @@
   <%= f.email_field :email %>
 </div>
 <div class='main item'>
+  <%# TODO MaxLengthの設定%>
   <%= f.label :page, 'password', class: 'text-light' %>
   <%= f.password_field :password %>
 </div>
