--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,8 @@
           </div>
         </div>
         <%= render partial: "templates/flash",locals: {class_name: "flash-login"} %>
+        <%# TODO エラーメッセージをどこに出すか考える %>
+        <%= render partial: "templates/errmessage"%>
         <div class="col-sm-9 wrapper-login">
           <%= yield %>
         </div>
