振り返りで出たことを反映

--- a/app/frontend/src/stylesheets/attendances.scss
+++ b/app/frontend/src/stylesheets/attendances.scss
@@ -5,15 +5,19 @@
 }
 
 .day_of_week_0, .day_of_week_holiday {
-  background-color: #f5c6cb;
+  background-color: #eccccf;
 }
 .day_of_week_1, .day_of_week_2,
 .day_of_week_3, .day_of_week_4, .day_of_week_5{
   background-color: rgb(235, 235, 235);
 }
-.day_of_week_6{
-  background-color: #bee5eb;
+.day_of_week_6 {
+  background-color: #b2f3f5;
 }
+.day_of_week_vacation {
+  background-color: #b5f7b8;
+}
+
 .search{
   margin-top: 50px;
 }
