--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,6 +44,7 @@
           </div>
         </div>
         <%= render partial: "templates/flash",locals: {class_name: "flash-login"} %>
+        <%# TODO 画面左右スクロール禁止 %>
         <div class="col-sm-9 wrapper-login">
           <%= render partial: "templates/errmessage"%>
           <%= yield %>
