specに例外処理を追加

--- a/app/views/attendances/show.html.erb
+++ b/app/views/attendances/show.html.erb
@@ -59,6 +59,7 @@
     </div>
   <% end %>
 <% end %>
+<%# TODO: 一括登録ボタンとかあるといいかも？ %>
 <%= render :partial => 'attendances/sum_table'%>
 <%= render :partial => 'attendances/attendance_table' %>
 
