--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
           </div>
         </div>
         <%= render partial: "templates/flash",locals: {class_name: "flash-login"} %>
-        <%# TODO 横スクロール禁止 %>
+        <%# TODO: 横スクロール禁止 %>
         <div class="col-sm-9 wrapper-login">
           <%= render partial: "templates/errmessage"%>
           <%= yield %>
