--- a/app/views/attendances/_attendance_table.html.erb
+++ b/app/views/attendances/_attendance_table.html.erb
@@ -2,13 +2,13 @@
   <table id="attendance-table" class='table table-condensed table-bordered table-sm' >
     <thead class='thead-light'>
       <tr class='text-center'>
-        <th><%= label :page, '日付'%></th>
-        <th><%= label :page, '曜日'%></th>
-        <th><%= label :page, '出勤時間'%></th>
-        <th><%= label :page, '退勤時間'%></th>
-        <th><%= label :page, '稼働時間'%></th>
-        <th><%= label :page, '休憩時間'%></th>
-        <th><%= label :page, '状態'%></th>
+        <th><%= label :page, I18n.t(:attendance, scope: :table_header)[0]%></th>
+        <th><%= label :page, I18n.t(:attendance, scope: :table_header)[1]%></th>
+        <th><%= label :page, I18n.t(:attendance, scope: :table_header)[2]%></th>
+        <th><%= label :page, I18n.t(:attendance, scope: :table_header)[3]%></th>
+        <th><%= label :page, I18n.t(:attendance, scope: :table_header)[4]%></th>
+        <th><%= label :page, I18n.t(:attendance, scope: :table_header)[5]%></th>
+        <th><%= label :page, I18n.t(:attendance, scope: :table_header)[6]%></th>
       </tr>
     </thead>
     <tbody>
@@ -21,7 +21,7 @@
         <tr name='row_<%=row%>' class='text-center day_of_week_<%= create_day_of_week_classname(row_date, selected_status(attendance_row, row_date)) %>'>
           <th name='date_<%=row%>'><%=row%></th>
           <th name='row_of_week_<%=row_date.wday%>'>
-            <%= t('date.abbr_day_names')[row_date.wday] %>
+            <%= t(:abbr_day_names, scope: :date)[row_date.wday] %>
           </th>
           <th name='start_work_<%=row%>'>
             <%= time_select("work_#{row_date.day}", 'start',
