--- a/app/views/attendances/_sum_table.html.erb
+++ b/app/views/attendances/_sum_table.html.erb
@@ -3,13 +3,13 @@
 </div>
   <thead class='thead-light'>
     <tr class='text-center'>
-      <th><%= label :page, '出勤日数'%></th>
-      <th><%= label :page, '稼働時間合計'%></th>
-      <th><%= label :page, '休憩時間合計'%></th>
-      <th><%= label :page, '有休取得数'%></th>
-      <th><%= label :page, '休日出勤数'%></th>
-      <th><%= label :page, '欠勤数'%></th>
-      <th><%= label :page, '休日数'%></th>
+      <th><%= label :page, I18n.t(:sum, scope: :table_header)[0] %></th>
+      <th><%= label :page, I18n.t(:sum, scope: :table_header)[1]%></th>
+      <th><%= label :page, I18n.t(:sum, scope: :table_header)[2]%></th>
+      <th><%= label :page, I18n.t(:sum, scope: :table_header)[3]%></th>
+      <th><%= label :page, I18n.t(:sum, scope: :table_header)[4]%></th>
+      <th><%= label :page, I18n.t(:sum, scope: :table_header)[5]%></th>
+      <th><%= label :page, I18n.t(:sum, scope: :table_header)[6]%></th>
     </tr>
   </thead>
   <tbody>
