--- a/app/views/holidays/_show_paid_vacation_table.html.erb
+++ b/app/views/holidays/_show_paid_vacation_table.html.erb
@@ -1,9 +1,9 @@
 <table class='table table-bordered table-striped table-light table-hover table-sm'>
   <thead>
     <tr>
-      <th>申請日</th>
-      <th>消化日数</th>
-      <th>申請状況</th>
+      <th><%= I18n.t(:table_header, scope: :holiday)[0]%></th>
+      <th><%= I18n.t(:table_header, scope: :holiday)[2]%></th>
+      <th><%= I18n.t(:table_header, scope: :holiday)[5]%></th>
     </tr>
   </thead>
   <tbody>
