--- a/app/views/user_managements/_user_management_table.html.erb
+++ b/app/views/user_managements/_user_management_table.html.erb
@@ -2,10 +2,10 @@
   <table class='table table-bordered  table-striped table-light table-hover table-sm'>
     <thead>
       <tr class='text-center align-middle'>
-        <th class='col-md-01 col-sm-01'>id</th>
-        <th class='col-md-04 col-sm-04'>氏名</th>
-        <th class='col-md-04 col-sm-04'>権限</th>
-        <th class='col-md-03 col-sm-03'>削除</th>
+        <th class='col-md-01 col-sm-01'><%= I18n.t(:user_management, scope: :table_header)[0]%></th>
+        <th class='col-md-04 col-sm-04'><%= I18n.t(:user_management, scope: :table_header)[1]%></th>
+        <th class='col-md-04 col-sm-04'><%= I18n.t(:user_management, scope: :table_header)[2]%></th>
+        <th class='col-md-03 col-sm-03'><%= I18n.t(:user_management, scope: :table_header)[3]%></th>
       </tr>
     </thead>
     <tbody>
@@ -25,7 +25,7 @@
           <%= form_with url: user_management_path(user.id), method: 'DELETE', local: true do |f| %>
           <td class='item-del col-md-03 col-sm-03'>
             <% if @current_user.id != user.id%>
-              <%= button_tag '削除' ,name: 'user_del', class:'btn btn-danger' %>
+              <%= button_tag I18n.t(:user_management, scope: :table_header)[3] ,name: 'user_del', class:'btn btn-danger' %>
             <% end %>
           </td>
           <%end%>
