--- a/app/views/user_managements/edit.html.erb
+++ b/app/views/user_managements/edit.html.erb
@@ -1,7 +1,7 @@
-<h1>ユーザー編集</h1>
+<h1><%= I18n.t(:user_edit, scope: :screen_name) %></h1>
 <div class='user_edit'>
   <%= form_with model:@user, url: user_management_path(@user.id), method: 'patch', local: true  do |f| %>
     <%= render :partial => "templates/user_edit" , :locals => {form: f,user: @user} %>
-    <%= f.submit '編集', class: 'btn btn-success' %>
+    <%= f.submit I18n.t(:edit, scope: :session), class: 'btn btn-success' %>
   <%end%>
 </div>
