--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,2 +1,2 @@
-<h1>出勤者リスト確認画面</h1>
+<h1><%= I18n.t(:working_user_list, scope: :screen_name)%></h1>
 <%= render :partial => 'users/user_list_table' %>
