--- a/app/views/holidays/show.html.erb
+++ b/app/views/holidays/show.html.erb
@@ -1,2 +1,2 @@
-<h1>有給休暇確認</h1>
+<h1><%= I18n.t(:paid_holiday_confirmation, scope: :screen_name)%></h1>
 <%= render :partial => 'holidays/show_paid_vacation_table' %>
