--- a/app/views/users/_user_list_table.html.erb
+++ b/app/views/users/_user_list_table.html.erb
@@ -2,16 +2,16 @@
   <table class='table table-condensed table-bordered table-sm'>
     <thead>
       <tr>
-        <th>名前</th>
-        <th>状態</th>
-        <th>更新日時</th>
+        <th><%= I18n.t(:user_list, scope: :table_header)[0]%></th>
+        <th><%= I18n.t(:user_list, scope: :table_header)[1]%></th>
+        <th><%= I18n.t(:user_list, scope: :table_header)[2]%></th>
       </tr>
     </thead>
     <tbody>
       <% @state_of_all_user.each do |user| %>
         <tr>
           <td><%= user.name %></td>
-          <td><%= user.status ? user_select_status(user.status.to_sym) : '未定' %></td>
+          <td><%= user.status ? user_select_status(user.status.to_sym) :  I18n.t(:undecided, scope: :attend) %></td>
           <td><%= user.updated_at %></td>
         </tr>
       <% end %>
