カラムの作成

--- a/app/views/holidays/_edit_paid_vacation_table.html.erb
+++ b/app/views/holidays/_edit_paid_vacation_table.html.erb
@@ -4,8 +4,10 @@
       <th><%= I18n.t(:table_header, scope: :holiday)[0]%></th>
       <th><%= I18n.t(:table_header, scope: :holiday)[1]%></th>
       <th><%= I18n.t(:table_header, scope: :holiday)[2]%></th>
+      <th>申請理由</th>
       <th><%= I18n.t(:table_header, scope: :holiday)[3]%></th>
       <th><%= I18n.t(:table_header, scope: :holiday)[4]%></th>
+      <th>認証者コメント</th>
     </tr>
   </thead>
   <tbody>
@@ -18,8 +20,11 @@
       <th><%= row.get_start_date%></th>
       <th><%= row.name %></th>
       <th><%= row.get_days %></th>
+      <%# TODO: %>
+      <th></th>
       <th><%= button_tag I18n.t(:approve, scope: :holiday), name:'approve', class:'btn btn-success' %></th>
       <th><%= button_tag I18n.t(:dismiss, scope: :holiday), name:'dismiss', class:'btn btn-danger' %></th>
+      <th></th>
     </tr>
     <%end%>
   <% end %>
