--- a/app/views/users/_user_list_table.html.erb
+++ b/app/views/users/_user_list_table.html.erb
@@ -5,6 +5,7 @@
         <th><%= I18n.t(:user_list, scope: :table_header)[0]%></th>
         <th><%= I18n.t(:user_list, scope: :table_header)[1]%></th>
         <th><%= I18n.t(:user_list, scope: :table_header)[2]%></th>
+        <th>memo(休暇理由など)</th>
       </tr>
     </thead>
     <tbody>
@@ -13,6 +14,8 @@
           <td><%= user.name %></td>
           <td><%= user.status ? user_select_status(user.status.to_sym) :  I18n.t(:undecided, scope: :attend) %></td>
           <td><%= user.updated_at %></td>
+          <%# TODO: 休暇申請理由などのメモが表示されるようにしたい%>
+          <td></td>
         </tr>
       <% end %>
     </tbody>
