[wip]入力fieldと処理を追加

--- a/app/views/attendances/_attendance_table.html.erb
+++ b/app/views/attendances/_attendance_table.html.erb
@@ -38,6 +38,7 @@
             <%= convert_min(calculate_break_time(attendance_row, row_date)) %>
           </th>
           <th name='status_row_<%=row%>'>
+          <%# TODO: changeイベント挿入 vacationならモーダル表示して理由を入力させる。 %>
             <%= select_tag("status_#{row}",
                 options_for_select(all_status.invert,
                 selected: selected_status(attendance_row, row_date)),
