--- a/app/views/holidays/_show_paid_vacation_table.html.erb
+++ b/app/views/holidays/_show_paid_vacation_table.html.erb
@@ -5,15 +5,20 @@
       <th><%= I18n.t(:table_header, scope: :holiday)[2]%></th>
       <th><%= I18n.t(:table_header, scope: :holiday)[5]%></th>
       <th>申請理由</th>
+      <th>承認者コメント</th>
     </tr>
   </thead>
   <tbody>
     <% @my_vacations.each do |row| %>
       <tr>
+        <%# TODO: 送信先controllerをどうするか %>
+        <%= form_with url: 'reason(row.applicant_id)',method: 'patch', local: true do %>
         <th><%= row.get_start_date %></th>
         <th><%= row.get_days %></th>
         <th><%= application_status[row.status.to_sym] if row.status %></th>
-        <th></th>
+        <th><%= text_field_tag 'reason', row.applied_reason , onchange: "$(this).parent('form').submit();" %></th>
+        <th><%= row.owner_comment %></th>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
