--- a/app/views/attendances/show.html.erb
+++ b/app/views/attendances/show.html.erb
@@ -47,6 +47,7 @@
       <input type='hidden' name='change_end_hour' value='' >
       <input type='hidden' name='change_end_minute' value='' >
       <input type='hidden' name='change_status' value='' >
+      <input type='hidden' name='vacation_reason' value=''>
     <% end %>
   </div>
 </div>
