--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
                 <% end %>
               <%end%>
             <%end%>
-            <%= link_to holiday_path(@current_user.id), class: 'list-group-item list-group-item-action list-group-item-light' do %>
+            <%= link_to user_holiday_path(@current_user.id), class: 'list-group-item list-group-item-action list-group-item-light' do %>
               <%= I18n.t(:menu, scope: :table_header)[3] %>
               <span class="badge badge-primary badge-pill"></span>
             <% end %>
