休暇申請処理変更

--- a/app/views/holidays/_edit_paid_vacation_table.html.erb
+++ b/app/views/holidays/_edit_paid_vacation_table.html.erb
@@ -11,21 +11,21 @@
     </tr>
   </thead>
   <tbody>
-  <% for row in @applying_vacation do %>
-    <tr>
+  <% @applying_vacation.each_with_index do |row, index| %>
+    <tr class='<%=index%>' >
     <%= form_with url: holiday_path(@current_user.id), method: 'patch', local: true do %>
       <input type='hidden' name='get_date' value="<%=row.get_start_date%>">
-      <input type='hidden' name='user_id' value="<%=row.applicant_id%>">
-      <input type='hidden' name='button' value=''>
+      <input type='hidden' name='user_id'  value="<%=row.applicant_id%>">
+      <input type='hidden' name='button' class="button_<%= index %>" value=''>
+      <input type='hidden' name='comment' class="comment_<%= index %>" value=''>
       <th><%= row.get_start_date%></th>
       <th><%= row.name %></th>
       <th><%= row.get_days %></th>
       <th><%= row.applied_reason %></th>
       <th><%= button_tag I18n.t(:approve, scope: :holiday), name:'approve', class:'btn btn-success' %></th>
       <th><%= button_tag I18n.t(:dismiss, scope: :holiday), name:'dismiss', class:'btn btn-danger' %></th>
-      <%# TODO: エンター押すと approve　処理が走る　%>
-      <th><%= text_field_tag 'comment', row.owner_comment %></th>
-    <%end%>
+    <% end %>
+      <th><%= text_field_tag 'owner-comment', row.owner_comment %></th>
     </tr>
   <% end %>
   </tbody>
