キャンセル時にstatusを戻す

--- a/app/views/attendances/_attendance_table.html.erb
+++ b/app/views/attendances/_attendance_table.html.erb
@@ -38,7 +38,7 @@
             <%= convert_min(calculate_break_time(attendance_row, row_date)) %>
           </th>
           <th name='status_row_<%=row%>'>
-          <%# TODO: changeイベント挿入 vacationならモーダル表示して理由を入力させる。 %>
+          <%# vacationならモーダル表示して理由を入力させる。 %>
             <%= select_tag("status_#{row}",
                 options_for_select(statuses_by_holiday(row_date),
                 selected: selected_status(attendance_row, row_date)),
@@ -55,6 +55,7 @@
                   </div>
                   <div class="modal-body">
                     <p>申請理由を記入してください</p>
+                    <%# TODO: 必須入力にするかどうか検討 %>
                     <%= text_field :apply, :reason %>
                   </div>
                   <div class="modal-footer">
