--- a/app/views/operation_log/index.html.erb
+++ b/app/views/operation_log/index.html.erb
@@ -1,2 +1,13 @@
 <h1>操作ログ</h1>
-<p>てーぶる</p>
+<ul class="nav nav-tabs">
+  <div id="nav1" class="nav-item nav-link active" data-toggle="tab">vacation</div>
+  <div id="nav2" class="nav-item nav-link" data-toggle="tab" >user</div>
+</ul>
+<div class="tab-content">
+  <div id="tab1" class="tab-pane active" >
+    <%= render :partial => 'operation_log/logs_table_vacation' %>
+  </div>
+  <div id="tab2" class="tab-pane" >
+    <%= render :partial => 'operation_log/logs_table_user' %>
+  </div>
+</div>
